--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "小程序商城后台服务",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node-dev src/index"
   },
   "author": "",
   "license": "ISC",
