--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "koa": "^2.13.4"
   },
   "dependencies": {
+    "@koa/multer": "^3.0.0",
     "crypto-js": "^4.1.1",
     "js-base64": "^3.7.2",
+    "koa-body": "^5.0.0",
     "koa-bodyparser": "^4.3.0",
+    "koa-formidable": "^1.1.0",
     "koa-router": "^12.0.0",
     "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "request-to-curl": "^0.1.6"
   }
